; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Tuple.c_Tuple_Iter_Last.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Tuple.c_Tuple_Iter_Last.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Tuple = type { %struct.Tuple** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.Tuple* (%struct.Tuple*)* @Tuple_Iter_Last to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.Tuple* @Tuple_Iter_Last(%struct.Tuple* %0) #0 {
  %2 = alloca %struct.Tuple*, align 8
  %3 = alloca %struct.Tuple*, align 8
  store %struct.Tuple* %0, %struct.Tuple** %2, align 8
  %4 = load %struct.Tuple*, %struct.Tuple** %2, align 8
  store %struct.Tuple* %4, %struct.Tuple** %3, align 8
  %5 = load %struct.Tuple*, %struct.Tuple** %3, align 8
  %6 = getelementptr inbounds %struct.Tuple, %struct.Tuple* %5, i32 0, i32 0
  %7 = load %struct.Tuple**, %struct.Tuple*** %6, align 8
  %8 = load %struct.Tuple*, %struct.Tuple** %3, align 8
  %9 = call i32 @Tuple_Len(%struct.Tuple* %8)
  %10 = sub nsw i32 %9, 1
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.Tuple*, %struct.Tuple** %7, i64 %11
  %13 = load %struct.Tuple*, %struct.Tuple** %12, align 8
  ret %struct.Tuple* %13
}

declare dso_local i32 @Tuple_Len(%struct.Tuple*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
